Fix an issue with comment options not showing on hover

--- a/media/system/less/comments.less
+++ b/media/system/less/comments.less
@@ -127,6 +127,10 @@
 				border-width: 10px;
 				border-color: transparent @commentBackground transparent transparent; 
 			}
+
+			&:hover .comment-options {
+				visibility: visible;
+			}
 		}
 
 		// Voting buttons
